# hermes-xmpp-plugin

./: .gitignore  LICENSE  MANIFEST.in  README.md  hermes_xmpp_plugin_common.py  install_xmpp_plugin.py  pyproject.toml  requirements.txt  uninstall_xmpp_plugin.py
.github/workflows/: ci.yml
tests/: test_common.py
xmpp_plugin_source/: README.md  __init__.py  adapter.py  omemo_plugin.py  plugin.yaml
